# serial-port-lib

./: CMakeLists.txt  README.md
include/: iCommunication.h  iParser.h  serialPort.h
src/: serialPort.cpp
